@@ -1,3 +1,9 @@
+2001-11-22  aito@fw.ipsj.or.jp
+
+	* [w3m-dev 02503]
+	* indep.c (getescapechar): allow incomplete entity references in URL
+	  closes: Debian Bug#120540
+
 2001-11-22  Fumitoshi UKAI  <ukai@debian.or.jp>
 
 	* [w3m-dev 02506]
